Adding authentication on creating post

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,4 +1,14 @@
 body{
     margin: 0;
-    text-align: center;
+   
+
+
+#layout-main {
+    height: 100%;
+}
+
+#posts-list-container{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
 }
