--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
         <%= title %>
     </title>
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 
     <%- style %>
 
@@ -12,8 +14,11 @@
         <body>
              <!-- Here is the partial used -->
                 <%- include('_header'); %>
-           
-              <%- body %>
+
+             <main id="layout-main">
+                <%- body %>
+            </main>
+            
 
              <%- include('_footer'); %>
 
