--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,33 @@
 
-        <h1>
-            Codeial/ <%= title %> 
-        </h1>
- 
+ <h1>
+     Codeial/ <%= title %> 
+ </h1>
+
+ <section id="feed-posts">
+     <h3>Posts</h3>
+     <% if (locals.user) {%>
+     <form action="/posts/create" id="new-post-form" method="POST">
+         <textarea name="content" cols="30" rows="3" placeholder="Type Here..">
+         </textarea>
+         <input type="submit" value="Post">
+     </form>
+     <% } %>
+
+     <div id="posts-list-container">
+         <ul>
+             <% for(post of posts) { %>
+                <li>
+                   <p>
+                        <%= post.content %>
+                    <br>
+                    <small>
+                            <%= post.user.name %>
+                    </small>
+                   </p>
+                </li>
+                <% } %>
+         </ul>
+     </div>
+ </section>
+
         
