--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
      <h3>Posts</h3>
      <% if (locals.user) {%>
      <form action="/posts/create" id="new-post-form" method="POST">
-         <textarea name="content" cols="30" rows="3" placeholder="Type Here..">
+         <textarea name="content" cols="30" rows="3" placeholder="Type Here.." required>
          </textarea>
          <input type="submit" value="Post">
      </form>
@@ -17,13 +17,37 @@
          <ul>
              <% for(post of posts) { %>
                 <li>
-                   <p>
+                   <p> Post -
                         <%= post.content %>
                     <br>
-                    <small>
+                    <small> User who posted -
                             <%= post.user.name %>
                     </small>
                    </p>
+                   <div class="post-comments">
+                       <% if(locals.user) { %>
+                        <form action="/comments/create" method="POST">
+                            <input type="text" name="content" placeholder="Type here to add Comment.." required>
+                            <input type="hidden" name="post" value="<%= post.id %>">
+                            <input type="submit" value="Add Comment">
+                        </form>
+                        <% } %>
+
+                        <div class="post-comments-list">
+                            <ul id="post-comments-<%= post._id%>">
+                                <% for(comment of post.comments) { %>
+                                <p>Comment -
+                                    <%= comment.content %>
+                                    <br>
+                                    <small> User who commented -
+                                        <%= comment.user.name%>
+                                    </small>
+                                </p>
+                                <% } %>
+                            </ul>
+
+                        </div>
+                   </div>
                 </li>
                 <% } %>
          </ul>
