--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,57 +1,32 @@
+<link rel="stylesheet" href="/css/home.css">
 
- <h1>
-     Codeial/ <%= title %> 
- </h1>
+<div id="home-container">
+    <section id="feed-posts">
+        <h3>Posts</h3>
+        <% if (locals.user) {%>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here.." required>
 
- <section id="feed-posts">
-     <h3>Posts</h3>
-     <% if (locals.user) {%>
-     <form action="/posts/create" id="new-post-form" method="POST">
-         <textarea name="content" cols="30" rows="3" placeholder="Type Here.." required>
-         </textarea>
-         <input type="submit" value="Post">
-     </form>
-     <% } %>
-
-     <div id="posts-list-container">
-         <ul>
-             <% for(post of posts) { %>
-                <li>
-                   <p> Post -
-                        <%= post.content %>
-                    <br>
-                    <small> User who posted -
-                            <%= post.user.name %>
-                    </small>
-                   </p>
-                   <div class="post-comments">
-                       <% if(locals.user) { %>
-                        <form action="/comments/create" method="POST">
-                            <input type="text" name="content" placeholder="Type here to add Comment.." required>
-                            <input type="hidden" name="post" value="<%= post.id %>">
-                            <input type="submit" value="Add Comment">
-                        </form>
+                </textarea>
+                <input type="submit" value="Post">
+            </form>
+            <% } %>
+            <div id="posts-list-container">
+                <ul>
+                    <% for(post of posts) { %>
+                        <%- include('_post') -%>
                         <% } %>
-
-                        <div class="post-comments-list">
-                            <ul id="post-comments-<%= post._id%>">
-                                <% for(comment of post.comments) { %>
-                                <p>Comment -
-                                    <%= comment.content %>
-                                    <br>
-                                    <small> User who commented -
-                                        <%= comment.user.name%>
-                                    </small>
-                                </p>
-                                <% } %>
-                            </ul>
-
-                        </div>
-                   </div>
-                </li>
-                <% } %>
-         </ul>
-     </div>
- </section>
+                    </ul>
+                </div>
+            </section>
+            <section id="user-friends">
+                <h4>FRIENDS</h4>
+                <% for(u of all_users) { %>
+                    <p>
+                        <a href="/users/profile/<%= u.id%>"><%= u.name %></a>
+                    </p>
+                    <% } %>
+                </section>
+            </div>
 
         
