--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,12 @@
              <!-- Here is the partial used -->
                 <%- include('_header'); %>
 
+                <% if(flash.success && flash.success.length > 0) {%>
+                    <h5>
+                        <%= flash.success %>
+                    </h5>
+                    <%}%>
+
              <main id="layout-main">
                 <%- body %>
             </main>
