--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,8 @@
     <title>
         <%= title %>
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -15,11 +17,12 @@
              <!-- Here is the partial used -->
                 <%- include('_header'); %>
 
-                <% if(flash.success && flash.success.length > 0) {%>
+               <!-- We will use Noty Flash messages.
+                   <% if(flash.success && flash.success.length > 0) {%>
                     <h5>
                         <%= flash.success %>
                     </h5>
-                    <%}%>
+                    <%}%> -->
 
              <main id="layout-main">
                 <%- body %>
@@ -29,6 +32,28 @@
              <%- include('_footer'); %>
 
              <%- script %>
+
+             <script>
+                 <% if(flash.success && flash.success.length >0){ %>
+                    new Noty({
+                        theme : 'relax',
+                        text: "<%= flash.success %>",
+                        type : 'success',
+                        layout : 'topRight',
+                        timeout : 1200
+                    }).show();
+                    <%}%>
+
+                   <% if(flash.error && flash.error.length >0){ %>
+                    new Noty({
+                        theme : 'relax',
+                        text: "<%= flash.error %>",
+                        type : 'error',
+                        layout : 'topRight',
+                        timeout : 1200
+                    }).show();
+                    <%}%>
+             </script>
              
         </body>
     </html>
