--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="post-<%= post._id%>">
     <p>
-        <% if(locals.user && locals.user.id == post.user.id) { %>
+    <% if(locals.user && locals.user.id == post.user.id) { %>
      <small>
-         <a href="/posts/destroy/<%= post.id%>" ><bold style="color: red;">X</bold></a>
+         <a class="delete-post-button" href="/posts/destroy/<%= post.id%>" ><bold style="color: red;">X</bold></a>
      </small> 
      <% } %>  
      Post -
