Applied AJAX on Comments as well for posting and deleting

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,14 +1,14 @@
-<li>
+<li id="comment-<%= comment._id %>">
     <p>
         <% if(locals.user && locals.user.id == comment.user.id) { %>
             <small>
-                <a href="/comments/destroy/<%= comment.id%>" ><bold style="color: red;">X</bold></a>
+                <a class="delete-comment-button" href="/comments/destroy/<%= comment.id%>" ><bold style="color: red;">X</bold></a>
             </small> 
             <% } %>  
         Comment -
         <%= comment.content %>
         <br>
-        <small> User who commented -
+        <small> 
             <%= comment.user.name%>
         </small>
     </p>
