--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -8,13 +8,13 @@
      Post -
          <%= post.content %>
      <br>
-     <small> User who posted -
+     <small> 
              <%= post.user.name %>
      </small>
     </p>
     <div class="post-comments">
         <% if(locals.user) { %>
-         <form action="/comments/create" method="POST">
+         <form action="/comments/create" id="new-comment-form" method="POST">
              <input type="text" name="content" placeholder="Type here to add Comment.." required>
              <input type="hidden" name="post" value="<%= post.id %>">
              <input type="submit" value="Add Comment">
