--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -7,3 +7,7 @@
     <input type="password" name="confirm_password" placeholder="Confirm password" required>
     <input type="submit" value="SignUp">
     </form>
+
+    <p>
+        <a href="/users/auth/google"> Google Sign In/ Sign Up</a>
+    </p>
